<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.main.MainActivity">

    <Button
        android:id="@+id/btn_add"
        android:layout_marginTop="@dimen/page_dimens"
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_marginTop="@dimen/page_dimens"
        android:layout_width="wrap_content"
        android:text="@string/delete"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btn_edit"
        android:layout_marginTop="@dimen/page_dimens"
        android:text="@string/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btn_getItem"
        android:layout_marginTop="@dimen/page_dimens"
        android:text="@string/get_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btn_getList"
        android:text="@string/get_list"
        android:layout_marginTop="@dimen/page_dimens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/page_dimens"
        android:layout_marginTop="@dimen/page_dimens"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:ignore="LabelFor"/>

</LinearLayout>